# anon0mesh

./: .easignore  .env.example  .gitignore  APP_STATUS_SUCCESS.md  BLE_SETUP_COMPLETE.md  BLE_TESTING_GUIDE.md  CHANGELOG.md  CHAT_COMMANDS.md  DURABLE_NONCES_SUMMARY.md  EXPO_BLE_CUSTOM_BUILD_GUIDE.md  EXPO_BLE_GUIDE.md  GATT_SERVER_SOLUTION.md  LICENSE  MANUAL_LINKING_DONE.md  MESH_IMPLEMENTATION_FIXED.md  MOCK_BLE_REMOVAL_SUMMARY.md  NOSTR_COMMANDS.md  NOSTR_COMPLETE.md  NOSTR_CONNECTION_FIX.md  NOSTR_FILTERING.md  NOSTR_INTEGRATION.md  NOSTR_REFACTOR_COMPLETE.md  NOSTR_TESTING.md  NOSTR_TESTING_COMPLETE.md  NOSTR_TESTING_QUICKREF.md  NOSTR_V2_MIGRATION.md  OFFLINE_P2P_MESH.md  PHYSICAL_DEVICE_BLE_GUIDE.md  QUICK_FIX_GUIDE.md  README.md  REAL_BLE_CRASH_FIX.md  REFACTORING_COMPLETE.md  RELAYER_FEES.md  SOLANA_DURABLE_NONCES.md  SOLANA_INTEGRATION.md  SOLANA_SERIALIZATION.md  TESTING_GUIDE.md  TOAST_INTEGRATION.md  WALLET_AUTO_DETECTION.md  WALLET_AUTO_DETECTION_QUICKSTART.md  (+11 more)
app/: _layout.tsx  ble-test.tsx  index.tsx  landing.tsx  nostr.tsx  onboarding.tsx  profile.tsx  selection.tsx  send.tsx  swap.tsx  wallet.tsx
components/: SnsNicknameSelector.tsx
docs/: useNoiseChat-QuickStart.md  useNoiseChat.md
escrow/: Anchor.toml  Cargo.toml
escrow/encrypted-ixs/src/: lib.rs
escrow/programs/escrow/: Cargo.toml
escrow/programs/escrow/src/: lib.rs
escrow/tests/: escrow.ts
hooks/: useDurableNonce.ts  useEscrow.ts  useTransactionHistory.ts  useWalletBalances.ts
lib/: escrow-program.ts
patches/: react-native-multi-ble-peripheral+0.1.5.patch
proxy_transfer_program/: package-lock.json  package.json
proxy_transfer_program/programs/proxy_transfer/: Cargo.toml
proxy_transfer_program/programs/proxy_transfer/src/: error.rs
proxy_transfer_program/programs/proxy_transfer/src/instructions/: arcium_integration.rs  circuits.rs  collect_referral_reward.rs  commit_per_changes.rs  initialize_proxy_transfer.rs  magicblock_per_integration.rs  mod.rs  setup_tax_payer.rs  undelegate_escrows.rs
proxy_transfer_program/programs/proxy_transfer/src/state/: referral_reward.rs  tax_payer.rs
proxy_transfer_program_old/: Anchor.toml
relays/: nostr_relays.csv  nostr_relays.json
(+254 files in other folders)
