[workspace]
members = ["programs/*", "encrypted-ixs"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
incremental = false
debug = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
opt-level = 3
incremental = true

[profile.dev.build-override]
opt-level = 3
incremental = true


