[package]
name = "proxy_transfer"
version = "0.1.0"
description = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proxy_transfer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
bumpalo = "=3.14.0"
anchor-spl = "0.31.1"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }


[dev-dependencies]
solana-sdk = "=2.3.1"
solana-program-test = "=2.3.3"